--- a/MyShopingOrder/packages.config
+++ b/MyShopingOrder/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="jquery.tablesorter" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
