--- a/MyShopingOrder/packages.config
+++ b/MyShopingOrder/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="jQuery.Ajax.Unobtrusive" version="2.0.20710.0" targetFramework="net452" />
   <package id="jquery.tablesorter" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
@@ -15,6 +16,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
